feat: Criado metodos de autenticação